Sync proto models for servers