@@ -39,8 +39,8 @@ public enum StorageResourceType implements com.google.protobuf.ProtocolMessageEn
         com.google.protobuf.RuntimeVersion.validateProtobufGencodeVersion(
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
-                /* minor= */ 27,
-                /* patch= */ 2,
+                /* minor= */ 29,
+                /* patch= */ 1,
                 /* suffix= */ "",
                 StorageResourceType.class.getName());
     }
@@ -93,7 +93,7 @@ public enum StorageResourceType implements com.google.protobuf.ProtocolMessageEn
     }
 
     private static final com.google.protobuf.Internal.EnumLiteMap<StorageResourceType> internalValueMap =
-            number -> StorageResourceType.forNumber(number);
+            StorageResourceType::forNumber;
 
     public final com.google.protobuf.Descriptors.EnumValueDescriptor getValueDescriptor() {
         if (this == UNRECOGNIZED) {
@@ -112,7 +112,7 @@ public enum StorageResourceType implements com.google.protobuf.ProtocolMessageEn
         return im.turms.server.common.access.client.dto.constant.StorageResourceTypeOuterClass
                 .getDescriptor()
                 .getEnumTypes()
-                .get(0);
+                .getFirst();
     }
 
     private static final StorageResourceType[] VALUES = values();
