@@ -25,8 +25,8 @@ public final class MessagesOuterClass {
         com.google.protobuf.RuntimeVersion.validateProtobufGencodeVersion(
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
-                /* minor= */ 27,
-                /* patch= */ 2,
+                /* minor= */ 29,
+                /* patch= */ 1,
                 /* suffix= */ "",
                 MessagesOuterClass.class.getName());
     }
@@ -59,7 +59,7 @@ public final class MessagesOuterClass {
                         im.turms.server.common.access.client.dto.model.message.MessageOuterClass
                                 .getDescriptor(),});
         internal_static_im_turms_proto_Messages_descriptor = getDescriptor().getMessageTypes()
-                .get(0);
+                .getFirst();
         internal_static_im_turms_proto_Messages_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_Messages_descriptor,
