@@ -25,8 +25,8 @@ public final class UserSettingsOuterClass {
         com.google.protobuf.RuntimeVersion.validateProtobufGencodeVersion(
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
-                /* minor= */ 27,
-                /* patch= */ 2,
+                /* minor= */ 29,
+                /* patch= */ 1,
                 /* suffix= */ "",
                 UserSettingsOuterClass.class.getName());
     }
@@ -65,14 +65,14 @@ public final class UserSettingsOuterClass {
                         im.turms.server.common.access.client.dto.model.common.ValueOuterClass
                                 .getDescriptor(),});
         internal_static_im_turms_proto_UserSettings_descriptor = getDescriptor().getMessageTypes()
-                .get(0);
+                .getFirst();
         internal_static_im_turms_proto_UserSettings_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_UserSettings_descriptor,
                         new java.lang.String[]{"Settings", "LastUpdatedDate", "CustomAttributes",});
         internal_static_im_turms_proto_UserSettings_SettingsEntry_descriptor =
                 internal_static_im_turms_proto_UserSettings_descriptor.getNestedTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_UserSettings_SettingsEntry_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_UserSettings_SettingsEntry_descriptor,
