@@ -25,8 +25,8 @@ public final class TurmsNotificationOuterClass {
         com.google.protobuf.RuntimeVersion.validateProtobufGencodeVersion(
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
-                /* minor= */ 27,
-                /* patch= */ 2,
+                /* minor= */ 29,
+                /* patch= */ 1,
                 /* suffix= */ "",
                 TurmsNotificationOuterClass.class.getName());
     }
@@ -182,7 +182,7 @@ public final class TurmsNotificationOuterClass {
                                 .getDescriptor(),});
         internal_static_im_turms_proto_TurmsNotification_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_TurmsNotification_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_TurmsNotification_descriptor,
@@ -197,7 +197,7 @@ public final class TurmsNotificationOuterClass {
                                 "RelayedRequest",});
         internal_static_im_turms_proto_TurmsNotification_Data_descriptor =
                 internal_static_im_turms_proto_TurmsNotification_descriptor.getNestedTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_TurmsNotification_Data_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_TurmsNotification_Data_descriptor,
