@@ -25,8 +25,8 @@ public final class UpdateGroupMemberRequestOuterClass {
         com.google.protobuf.RuntimeVersion.validateProtobufGencodeVersion(
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
-                /* minor= */ 27,
-                /* patch= */ 2,
+                /* minor= */ 29,
+                /* patch= */ 1,
                 /* suffix= */ "",
                 UpdateGroupMemberRequestOuterClass.class.getName());
     }
@@ -50,15 +50,16 @@ public final class UpdateGroupMemberRequestOuterClass {
         java.lang.String[] descriptorData = {"\n6request/group/member/update_group_memb"
                 + "er_request.proto\022\016im.turms.proto\032 consta"
                 + "nt/group_member_role.proto\032\030model/common"
-                + "/value.proto\"\370\001\n\030UpdateGroupMemberReques"
+                + "/value.proto\"\224\002\n\030UpdateGroupMemberReques"
                 + "t\022\020\n\010group_id\030\001 \001(\003\022\021\n\tmember_id\030\002 \001(\003\022\021"
                 + "\n\004name\030\003 \001(\tH\000\210\001\001\0222\n\004role\030\004 \001(\0162\037.im.tur"
                 + "ms.proto.GroupMemberRoleH\001\210\001\001\022\032\n\rmute_en"
-                + "d_date\030\005 \001(\003H\002\210\001\001\0220\n\021custom_attributes\030\017"
-                + " \003(\0132\025.im.turms.proto.ValueB\007\n\005_nameB\007\n\005"
-                + "_roleB\020\n\016_mute_end_dateBD\n=im.turms.serv"
-                + "er.common.access.client.dto.request.grou"
-                + "p.memberP\001\272\002\000b\006proto3"};
+                + "d_date\030\005 \001(\003H\002\210\001\001\022\021\n\004note\030\006 \001(\tH\003\210\001\001\0220\n\021"
+                + "custom_attributes\030\017 \003(\0132\025.im.turms.proto"
+                + ".ValueB\007\n\005_nameB\007\n\005_roleB\020\n\016_mute_end_da"
+                + "teB\007\n\005_noteBD\n=im.turms.server.common.ac"
+                + "cess.client.dto.request.group.memberP\001\272\002"
+                + "\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
                 new com.google.protobuf.Descriptors.FileDescriptor[]{
@@ -68,7 +69,7 @@ public final class UpdateGroupMemberRequestOuterClass {
                                 .getDescriptor(),});
         internal_static_im_turms_proto_UpdateGroupMemberRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_UpdateGroupMemberRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_UpdateGroupMemberRequest_descriptor,
@@ -77,6 +78,7 @@ public final class UpdateGroupMemberRequestOuterClass {
                                 "Name",
                                 "Role",
                                 "MuteEndDate",
+                                "Note",
                                 "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
         im.turms.server.common.access.client.dto.constant.GroupMemberRoleOuterClass.getDescriptor();
