@@ -25,8 +25,8 @@ public final class UpdateUserLocationRequestOuterClass {
         com.google.protobuf.RuntimeVersion.validateProtobufGencodeVersion(
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
-                /* minor= */ 27,
-                /* patch= */ 2,
+                /* minor= */ 29,
+                /* patch= */ 1,
                 /* suffix= */ "",
                 UpdateUserLocationRequestOuterClass.class.getName());
     }
@@ -66,7 +66,7 @@ public final class UpdateUserLocationRequestOuterClass {
                                 .getDescriptor(),});
         internal_static_im_turms_proto_UpdateUserLocationRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_UpdateUserLocationRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_UpdateUserLocationRequest_descriptor,
@@ -76,7 +76,7 @@ public final class UpdateUserLocationRequestOuterClass {
                                 "CustomAttributes",});
         internal_static_im_turms_proto_UpdateUserLocationRequest_DetailsEntry_descriptor =
                 internal_static_im_turms_proto_UpdateUserLocationRequest_descriptor.getNestedTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_UpdateUserLocationRequest_DetailsEntry_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_UpdateUserLocationRequest_DetailsEntry_descriptor,
