@@ -25,8 +25,8 @@ public final class UpdateFriendRequestRequestOuterClass {
         com.google.protobuf.RuntimeVersion.validateProtobufGencodeVersion(
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
-                /* minor= */ 27,
-                /* patch= */ 2,
+                /* minor= */ 29,
+                /* patch= */ 1,
                 /* suffix= */ "",
                 UpdateFriendRequestRequestOuterClass.class.getName());
     }
@@ -67,7 +67,7 @@ public final class UpdateFriendRequestRequestOuterClass {
                                 .getDescriptor(),});
         internal_static_im_turms_proto_UpdateFriendRequestRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_UpdateFriendRequestRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_UpdateFriendRequestRequest_descriptor,
